# color_error

./: CMakeLists.txt  LICENSE  README.md
src/: color_error.cc
src/color_error/: edit_distance.cc  edit_distance.h  edit_distance_printer.cc  edit_distance_printer.h  edit_distance_result.cc  edit_distance_result.h  edit_names.cc  edit_names.h  edit_node.h  edit_operation.cc  edit_operation.h  string_mapper.cc  string_mapper.h
